tests/invalid/generated_binop_sub_int_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: int = 1
    y: bytearray = bytearray(b"hello")
    z = x - y
